release/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: hemrs-frontend
    kustomize.toolkit.fluxcd.io/name: hemrs-frontend-release
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: hemrs-frontend
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    io.kompose.service: hemrs-frontend
  type: ClusterIp
status:
  loadBalancer: {}
