release/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hemrs-frontend-ingress
  namespace: default

spec:
  rules:
    - host: thor.lan
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: hemrs-frontend 
                port:
                  number: 80
